Fixed issue with too small body

--- a/faq-accordion-card/css/styles.css
+++ b/faq-accordion-card/css/styles.css
@@ -15,6 +15,7 @@ html {
 }
 
 body {
+    min-height: 100vh;
     width: 100%;
     max-width: 100%;
     font-size: 0.75rem;
